fixed some images and layout problems

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,23 +138,6 @@ header a:hover{
     width:250px;
 }
 
-/* Homepage Content */
-/* #homepage_content{
-    margin-top:20px;
-}
-
-#homepage_content .box{
-    float:left;
-    text-align: center;
-    width:90%;
-    padding:10px;
-}
-
-#homepage_content .box img{
-    width:1000px;
-    height:80px;
-} */
-
 #homepage_content .home_container {
   display: flex;
 }
@@ -249,9 +232,9 @@ ul#faqs_questions li{
     margin: 1em auto;
     padding: 0.5em;
     max-width: 400px;
-    color: green;
+    color: #9caf88;
     text-align: center;
-    border: 1px solid #cfc;
+    border: 1px solid #9caf88;
     border-radius: 4px;
 }
 
@@ -277,7 +260,7 @@ ul#learning_class li{
 .learning_images{
     margin-top:10px;
     width:80%;
-    height:200px;
+    height:250px;
 }
 
 footer{
@@ -320,4 +303,22 @@ footer{
         width:100%;
         margin-bottom:5px;
     }
+}
+
+/*showcase */
+#showcase{
+    min-height:300px;
+    background:url('https://pixabay.com/photos/piano-music-keys-keyboard-9271509/') no-repeat 0 -400px;
+    text-align:center;
+    color:#9caf88;
+}
+
+#showcase h1{
+    margin-top:100px;
+    font-size:55px;
+    margin-bottom:10px;
+}
+
+#showcase p{
+    font-size:20px;
 }
